PR 44156: od -? prints usage for "hexdump" rather than "od"